--- a/index.html
+++ b/index.html
@@ -105,44 +105,15 @@
 
 <div class="featurette">
   <div class="container">
-    <h1 class="step-num">1</h1>
-    <h2>Premier Pays</h2>
-    <p class="lead">Erat autem diritatis eius hoc quoque indicium nec obscurum nec latens, quod ludicris cruentis delectabatur et in circo sex vel septem aliquotiens vetitis certaminibus pugilum vicissim se concidentium perfusorumque sanguine specie ut lucratus ingentia laetabatur.</p>
+    <p class="lead">Parents, familles, amis, collègues, touristes du Net...</p>
+    <h2>BIENVENIDOS</h2>
+    <p class="lead">Nous voilà dans les starting-blocks d'un voyage de 5 mois en Amérique du Sud qui s'annonce riche en évènements !</p>
+    <p class="lead">Vous trouverez sur ce site quelques infos sur nos préparatifs et notre parcours prévisionnel dans la rubrique "Présentation".
+    Nous essaierons de le mettre régulièrement à jour pour que vous puissiez suivre nos aventures...
+    en espérant que les connexions Internet locales ne nous freinent pas trop !</p>
+    <p class="lead">Bonne lecture et n'hésitez pas à nous poster des petits commentaires, ça fait toujours plaisir !</p>
     <a href="#" class="thumbnail">
-      <img src="./assets/img/moma-1.jpg" alt="">
-    </a>
-  </div>
-</div>
-
-<div class="featurette">
-  <div class="container">
-    <h1 class="step-num">2</h1>
-    <h2>Le deuxieme</h2>
-    <p class="lead">Erat autem diritatis eius hoc quoque indicium nec obscurum nec latens, quod ludicris cruentis delectabatur et in circo sex vel septem aliquotiens vetitis certaminibus pugilum vicissim se concidentium perfusorumque sanguine specie ut lucratus ingentia laetabatur.</p>
-    <a href="#" class="thumbnail">
-      <img src="./assets/img/moma-1.jpg" alt="">
-    </a>
-  </div>
-</div>
-
-<div class="featurette">
-  <div class="container">
-    <h1 class="step-num">3</h1>
-    <h2>Le troisieme</h2>
-    <p class="lead">Erat autem diritatis eius hoc quoque indicium nec obscurum nec latens, quod ludicris cruentis delectabatur et in circo sex vel septem aliquotiens vetitis certaminibus pugilum vicissim se concidentium perfusorumque sanguine specie ut lucratus ingentia laetabatur.</p>
-    <a href="#" class="thumbnail">
-      <img src="./assets/img/moma-1.jpg" alt="">
-    </a>
-  </div>
-</div>
-
-<div class="featurette">
-  <div class="container">
-    <h1 class="step-num">4</h1>
-    <h2>le quatrieme</h2>
-    <p class="lead">Erat autem diritatis eius hoc quoque indicium nec obscurum nec latens, quod ludicris cruentis delectabatur et in circo sex vel septem aliquotiens vetitis certaminibus pugilum vicissim se concidentium perfusorumque sanguine specie ut lucratus ingentia laetabatur.</p>
-    <a href="#" class="thumbnail">
-      <img src="./assets/img/moma-1.jpg" alt="">
+      <img src="{{ page.base_url }}assets/img/Carte parcours.jpg" alt="Carte parcours.jpg">
     </a>
   </div>
 </div>
